Change: conclusion address

--- a/content/en/post/2024-03-06-Goodbye MBP 9,2.md
+++ b/content/en/post/2024-03-06-Goodbye MBP 9,2.md
@@ -29,4 +29,6 @@ As I said, the size of the 13 inch laptop is the best for mobility. It is defini
 One of the killer features of this laptop when compared to newer models has been the keyboard. It is backlit and has great key travel. It is from before all the problems that plagued the butterfly keyboards and that tarnished the MacBooks lineup for so long. One of the things that I always saw as background problem for those laptops has been the butterfly keyboards and more recently that TouchBar, which made no sense for me since the beginning.
 The fact that it is an older computer was a freeing in the sense that I could carry it around like it was really not a big deal. Could leave it unattended in the library, knock it over, let it fall, let the dog walk on it, etc. Now with the new computer I have to be a lot more careful.
 # Conclusion
-I am happy with all this years with this computer. It really has served me well. It accompanied me from the undergrad days to my first job, and to this very day that I have been able to buy this new computer. I intend to stay with this new computer for many years to come, maybe even 10 years (?). 
+I am happy with all this years with this computer. It really has served me well. It accompanied me from the undergrad days to my first job, and to this very day that I have been able to buy this new computer. I intend to stay with this new computer for many years to come, maybe even 10 years (?).
+
+You can reach out to contact me about this or other topics at my email lucas.fernandes.df@gmail.com.
